# algoplex

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: pages.yml
include/: app.hpp  arena.hpp  bfs.hpp  colors.h  debug_panel_fmt.hpp  events.hpp  graph_algorithm.hpp  graph_scene.hpp  menu.hpp  scene.hpp  scene_registry.hpp  state.hpp  utils.hpp  web.hpp
public/: dfs.py
public/wasm/: algo-visualizer.data  algo-visualizer.js  algo-visualizer.wasm
scripts/: gen-wasm-types.ts  generateEnums.ts
src/: App.tsx  app.cpp  arena.cpp  events.cpp  graph_scene.cpp  index.css  main.cpp  menu.cpp  scene.cpp  shell.html  tooltips.ts  utils.cpp  web.cpp
src/components/adjMatrix/: AdjacencyMatrix.tsx
src/components/algo-menu-panel/: AlgoMenuPanel.tsx
src/components/code-panel/: CodePanel.tsx
src/components/hooks/: useWindowResize.ts
src/components/info-panel/: InfoPanel.tsx
src/components/monacoEditor/: MonacoEditor.tsx
src/components/navbar/: Navbar.tsx
src/components/nodeDataInputModal/: NodeDataInputHandler.tsx  NodeDataInputModal.tsx
src/components/settings-panel/: SettingsPanel.tsx
src/components/stackView/: StackView.tsx
src/components/tooltip/: Tooltip.tsx
src/types/: EventDescriptor.ts  InfoPanel.ts  wasmmodule.d.ts
src/wasm/: algo-visualizer.js  algo-visualizer.wasm
